--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.zxm</groupId>
+  <groupId>com.tg</groupId>
   <artifactId>id-worker</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -18,6 +18,42 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <log4j.version>2.4.1</log4j.version>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>tgou</id>
+      <name>tgou central repository</name>
+      <url>http://maven.66buy.com.cn:8081/nexus/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </snapshots>
+      <layout>default</layout>
+    </repository>
+  </repositories>
+
+  <distributionManagement>
+    <site>
+      <id>website</id>
+      <url>scp://webhost.company.com/www/website</url>
+    </site>
+    <repository>
+      <id>releases</id>
+      <name>JP Releases</name>
+      <url>http://maven.66buy.com.cn:8081/nexus/content/repositories/releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>JP Snapshots</name>
+      <url>http://maven.66buy.com.cn:8081/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
@@ -46,7 +82,7 @@
       </exclusions>
     </dependency>
 
-    <!-- Log4j -->
+    <!--&lt;!&ndash; Log4j &ndash;&gt;
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
@@ -77,7 +113,7 @@
       <groupId>com.lmax</groupId>
       <artifactId>disruptor</artifactId>
       <version>3.3.2</version>
-    </dependency>
+    </dependency>-->
 
     <!-- Slf4j -->
     <dependency>
